<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f4f4"
    tools:context=".settings.FragmentSettings">

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="413dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/Ajustes"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLanguaje"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/sLan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings">

        <ImageView
            android:id="@+id/ivQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:src="@drawable/quote"
            android:contentDescription="@string/cd" />

        <TextView
            android:id="@+id/tvTittleLanguaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:paddingStart="50dp"
            android:paddingEnd="1dp"
            android:text="@string/Languaje"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <Switch
        android:id="@+id/sLan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center|start"
        android:minHeight="48dp"
        android:text="@string/selectedLenguaje"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/cvTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvLanguaje"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTheme"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sLan">

        <ImageView
            android:id="@+id/ivTrazado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:paddingStart="20dp"
            android:paddingEnd="1dp"
            android:src="@drawable/trazado_110"
            android:contentDescription="@string/cd"/>

        <TextView
            android:id="@+id/tvTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:paddingStart="50dp"
            android:paddingEnd="1dp"
            android:text="@string/Theme"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_marginBottom="150dp"
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvTheme"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".singleActivitySample.SingleActivity">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btbase"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textColor="#FF03DAC6"
            app:cardBackgroundColor="#ebf3fa"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <TextView
                android:id="@+id/tvbase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btbase"
                android:textColor="@color/icon_default" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btdark"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:textColor="@color/icon_default"
            app:cardBackgroundColor="#ebf3fa"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <TextView
                android:id="@+id/tvdark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btoscuro"
                android:textColor="@color/icon_default" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btPink"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#ebf3fa"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <TextView
                android:id="@+id/tvPink"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btrosa"
                android:textColor="@color/icon_default" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>